add evn secret on yaml

--- a/.github/workflows/nextjs.yaml
+++ b/.github/workflows/nextjs.yaml
@@ -75,6 +75,9 @@ jobs:
               run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
             - name: Build with Next.js
               run: ${{ steps.detect-package-manager.outputs.runner }} next build
+              env:
+                  PLASMIC_PROJECT_ID: ${{ secrets.PLASMIC_PROJECT_ID }}
+                  PLASMIC_PROJECT_TOKEN: ${{ secrets.PLASMIC_PROJECT_TOKEN }}
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
