--- a/.github/workflows/nextjs.yaml
+++ b/.github/workflows/nextjs.yaml
@@ -61,14 +61,11 @@ jobs:
                   #
                   # You may remove this line if you want to manage the configuration yourself.
                   static_site_generator: next
-            - name: Restore cache
+            - name: Cache Next.js build
               uses: actions/cache@v4
               with:
-                  path: |
-                      .next/cache
-                  # Generate a new cache whenever packages or source files change.
+                  path: .next/cache
                   key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-                  # If source files changed but packages didn't, rebuild from a prior cache.
                   restore-keys: |
                       ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
             - name: Install dependencies
