--- a/.github/workflows/nextjs.yaml
+++ b/.github/workflows/nextjs.yaml
@@ -71,7 +71,7 @@ jobs:
             - name: Install dependencies
               run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
             - name: Build with Next.js
-              run: ${{ steps.detect-package-manager.outputs.runner }} next build
+              run: ${{ steps.detect-package-manager.outputs.runner }} next build --no-cache
               env:
                   PLASMIC_PROJECT_ID: ${{ secrets.PLASMIC_PROJECT_ID }}
                   PLASMIC_PROJECT_TOKEN: ${{ secrets.PLASMIC_PROJECT_TOKEN }}
